--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -53,7 +53,14 @@
     <Compile Include="Classes\IBMi.cs" />
     <Compile Include="Classes\IBMiUtils.cs" />
     <Compile Include="Classes\LanguageTools\RPGParser.cs" />
+    <Compile Include="Classes\Licence.cs" />
     <Compile Include="Classes\Member.cs" />
+    <Compile Include="Forms\LicenceKey.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LicenceKey.Designer.cs">
+      <DependentUpon>LicenceKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserTools\ErrorListing.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -109,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\HostSelect.resx">
       <DependentUpon>HostSelect.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LicenceKey.resx">
+      <DependentUpon>LicenceKey.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewSystem.resx">
       <DependentUpon>NewSystem.cs</DependentUpon>
