--- a/ILEditor/ILEditor.csproj
+++ b/ILEditor/ILEditor.csproj
@@ -169,6 +169,12 @@
     <Compile Include="Forms\Splash.Designer.cs">
       <DependentUpon>Splash.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ValueWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ValueWindow.Designer.cs">
+      <DependentUpon>ValueWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserTools\CompileOptions.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -219,6 +225,12 @@
     <Compile Include="UserTools\MemberBrowse.Designer.cs">
       <DependentUpon>MemberBrowse.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserTools\TreeBrowse.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserTools\TreeBrowse.Designer.cs">
+      <DependentUpon>TreeBrowse.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserTools\UserToolList.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -267,6 +279,9 @@
     <EmbeddedResource Include="Forms\Splash.resx">
       <DependentUpon>Splash.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ValueWindow.resx">
+      <DependentUpon>ValueWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -294,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserTools\SourceEditor.resx">
       <DependentUpon>SourceEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserTools\TreeBrowse.resx">
+      <DependentUpon>TreeBrowse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserTools\UserToolList.resx">
       <DependentUpon>UserToolList.cs</DependentUpon>
